I did it!! Is it okay if the array is all weird like that?

--- a/SMC_Photometry.ipynb
+++ b/SMC_Photometry.ipynb
@@ -90,25 +90,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "error and data must have the same shape.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-53-5af4e0c93d0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mapers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpixel_apertures\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mphot_table\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maperture_photometry\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhdu\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mapers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mphot_table\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Users\\dougl\\Anaconda3\\lib\\site-packages\\astropy\\utils\\decorators.py\u001b[0m in \u001b[0;36maperture_photometry\u001b[0;34m(data, apertures, error, pixelwise_error, mask, method, subpixels, unit, wcs)\u001b[0m\n\u001b[1;32m    872\u001b[0m             \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    873\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 874\u001b[0;31m         \u001b[0mfunc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmake_function_with_signature\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mwrapped_args\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    875\u001b[0m         func = functools.update_wrapper(func, wrapped, assigned=assigned,\n\u001b[1;32m    876\u001b[0m                                         updated=updated)\n",
-      "\u001b[0;32mC:\\Users\\dougl\\Anaconda3\\lib\\site-packages\\astropy\\nddata\\decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(data, *args, **kwargs)\u001b[0m\n\u001b[1;32m    247\u001b[0m                                   AstropyUserWarning)\n\u001b[1;32m    248\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 249\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    250\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    251\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0munpack\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mrepack\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Users\\dougl\\Anaconda3\\lib\\site-packages\\photutils\\aperture\\core.py\u001b[0m in \u001b[0;36maperture_photometry\u001b[0;34m(data, apertures, error, pixelwise_error, mask, method, subpixels, unit, wcs)\u001b[0m\n\u001b[1;32m    941\u001b[0m     \u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpixelwise_error\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwcs\u001b[0m \u001b[1;33m=\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    942\u001b[0m         _prepare_photometry_input(data, error, pixelwise_error, mask, wcs,\n\u001b[0;32m--> 943\u001b[0;31m                                   unit)\n\u001b[0m\u001b[1;32m    944\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    945\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmethod\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'subpixel'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mC:\\Users\\dougl\\Anaconda3\\lib\\site-packages\\photutils\\aperture\\core.py\u001b[0m in \u001b[0;36m_prepare_photometry_input\u001b[0;34m(data, error, pixelwise_error, mask, wcs, unit)\u001b[0m\n\u001b[1;32m    810\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    811\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0merror\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m--> 812\u001b[0;31m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'error and data must have the same shape.'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    813\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m    814\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: error and data must have the same shape."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<Column name='aperture_sum' dtype='float64' length=1>\n",
+      "553.896778067, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "17.2601583074, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "363.677266051, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "150.40839083, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "704.561288395, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "53.750888421, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "42.4439426341, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "262.981576772, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "282.786218806, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "17.0465795206, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "88.9699337441, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "137.787198932, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "9.02749104965, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "20.6993735819, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "189.963337315, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "185.93752571, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "23.5233043218, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "71.7768796169, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "201.717252862, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "89.3041498462, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "9.16896884507, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "109.434649846, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "73.0095288628, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "2.8793835909, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "62.7731621079, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "211.706383863, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "138.17685525, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "376.569636792, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "91.4872563839, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "28.9169903361, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "278.413662135, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "122.664258179, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "61.2605463066, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "123.669481164, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "129.779771733, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "417.672441222, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "134.567008904, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "83.0591629687, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "45.6345517428, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "262.109132058, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "28.8653858298, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "137.613158742, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "88.1245975362, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "69.631677149, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "222.031713098, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "58.7310119187, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "28.0169888542, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "750.170811737, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "174.406182067, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "497.361515329, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "13.3663046564, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "35.35967463, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "21.5638403889, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "151.302496151, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "96.3923542716, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "5.9565801786, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "8.05533151995, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "2.60365397292, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "8.22796841537, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "22.0978575613, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "14.8603740521, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "10.9524400637, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "20.2821128643, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "53.4652243603, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "146.594457906, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "107.44018599, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "139.763179263, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "36.4843362174, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "76.50629552, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "43.1811056281, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "15.2246365285, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "43.3482049581, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "20.473633452, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "1.10180145001, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "500.311459477, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "9.8099856612, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "156.067824803, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "7053.52844854, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "171.7481637, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "1033.01408101, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "118.510297124, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "161.016666031, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "47.84498433, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "478.578434177, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "137.443900077, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "149.673035841, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "45.4871543844, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "392.214512525, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "275.714378976, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "12.9341995847, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "227.732993458, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "51.1980692696, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "13.9280964051, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "24.7184363995, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "111.734577942, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "748.747932621, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "129.099499663, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "521.72254347, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "418.76615435, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "2354.30935807, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "83.6167448368, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "980.259663346, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "408.899861608, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "63.6728246586, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "1037.08659794, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "325.573668977, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "280.135278009, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "93.9340584495, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "252.223468433, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "102.097071986, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "51.0451336581, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "66.6209370872, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "13.6821355166, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "231.098694564, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "107.245639963, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "1.07156087546, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "11.3109448359, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "18.4913763381, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "582.659755758, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "113.59127065, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "79.1398079445, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "324.030191168, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "4.36369836985, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "171.875572609, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "187.731608888, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "192.299301705, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "52.3633057596, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "344.15043391, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "154.025186003, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "105.680255427, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "118.88955556, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "596.347112505, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "683.683733854, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "38.2504471638, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "133.093422969, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "25.7749710848, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "4.22163460962, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "2.32697064616, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "44.8489473886, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "26.0430492479, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "24.6138172261, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "17.8746638603, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "45.935646422, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "71.6726383655, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "334.26540505, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "11.5644460089, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "19.3142013671, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "202.97639957, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "16.1837758055, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "16.7975062044, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "151.891344166, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "256.61810026, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "71.0498692202, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "93.7066327851, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "79.5102772059, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "23.9780050406, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "22.7413970052, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "477.879785942, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "119.635138858, <Column name='aperture_sum' dtype='float64' length=1>\n",
+      "28.8954008375]\n"
      ]
     }
    ],
@@ -116,15 +268,14 @@
     "positions = SkyCoord(ra=data['_RAJ2000'] * u.deg, dec=data['_DEJ2000'] * u.deg, frame='fk5')\n",
     "r=data['R_ap'] * u.arcsec\n",
     "\n",
-    "apers = []\n",
+    "Real_phot_table = []\n",
     "\n",
     "for i in range(0, 160):\n",
     "    apertures = SkyCircularAperture(positions[i], r[i])\n",
-    "    pixel_apertures = apertures.to_pixel(w,mode='wcs')\n",
-    "    apers.append(pixel_apertures)\n",
-    "\n",
-    "phot_table = aperture_photometry(hdu[0], apers, w)\n",
-    "print(phot_table)"
+    "    Fake_phot_table = aperture_photometry(hdu[0], apertures)\n",
+    "    Real_phot_table.append(Fake_phot_table['aperture_sum'])\n",
+    "    \n",
+    "print(Real_phot_table)"
    ]
   },
   {
