--- a/SMC_Photometry.ipynb
+++ b/SMC_Photometry.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -100,167 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Column name='aperture_sum' dtype='float64' length=1>\n",
-      "553.896778067, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "17.2601583074, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "363.677266051, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "150.40839083, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "704.561288395, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "53.750888421, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "42.4439426341, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "262.981576772, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "282.786218806, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "17.0465795206, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "88.9699337441, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "137.787198932, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "9.02749104965, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "20.6993735819, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "189.963337315, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "185.93752571, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "23.5233043218, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "71.7768796169, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "201.717252862, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "89.3041498462, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "9.16896884507, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "109.434649846, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "73.0095288628, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "2.8793835909, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "62.7731621079, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "211.706383863, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "138.17685525, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "376.569636792, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "91.4872563839, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "28.9169903361, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "278.413662135, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "122.664258179, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "61.2605463066, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "123.669481164, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "129.779771733, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "417.672441222, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "134.567008904, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "83.0591629687, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "45.6345517428, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "262.109132058, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "28.8653858298, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "137.613158742, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "88.1245975362, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "69.631677149, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "222.031713098, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "58.7310119187, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "28.0169888542, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "750.170811737, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "174.406182067, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "497.361515329, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "13.3663046564, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "35.35967463, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "21.5638403889, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "151.302496151, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "96.3923542716, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "5.9565801786, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "8.05533151995, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "2.60365397292, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "8.22796841537, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "22.0978575613, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "14.8603740521, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "10.9524400637, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "20.2821128643, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "53.4652243603, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "146.594457906, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "107.44018599, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "139.763179263, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "36.4843362174, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "76.50629552, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "43.1811056281, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "15.2246365285, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "43.3482049581, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "20.473633452, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "1.10180145001, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "500.311459477, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "9.8099856612, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "156.067824803, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "7053.52844854, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "171.7481637, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "1033.01408101, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "118.510297124, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "161.016666031, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "47.84498433, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "478.578434177, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "137.443900077, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "149.673035841, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "45.4871543844, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "392.214512525, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "275.714378976, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "12.9341995847, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "227.732993458, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "51.1980692696, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "13.9280964051, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "24.7184363995, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "111.734577942, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "748.747932621, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "129.099499663, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "521.72254347, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "418.76615435, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "2354.30935807, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "83.6167448368, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "980.259663346, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "408.899861608, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "63.6728246586, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "1037.08659794, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "325.573668977, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "280.135278009, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "93.9340584495, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "252.223468433, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "102.097071986, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "51.0451336581, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "66.6209370872, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "13.6821355166, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "231.098694564, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "107.245639963, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "1.07156087546, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "11.3109448359, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "18.4913763381, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "582.659755758, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "113.59127065, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "79.1398079445, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "324.030191168, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "4.36369836985, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "171.875572609, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "187.731608888, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "192.299301705, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "52.3633057596, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "344.15043391, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "154.025186003, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "105.680255427, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "118.88955556, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "596.347112505, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "683.683733854, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "38.2504471638, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "133.093422969, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "25.7749710848, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "4.22163460962, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "2.32697064616, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "44.8489473886, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "26.0430492479, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "24.6138172261, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "17.8746638603, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "45.935646422, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "71.6726383655, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "334.26540505, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "11.5644460089, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "19.3142013671, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "202.97639957, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "16.1837758055, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "16.7975062044, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "151.891344166, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "256.61810026, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "71.0498692202, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "93.7066327851, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "79.5102772059, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "23.9780050406, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "22.7413970052, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "477.879785942, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "119.635138858, <Column name='aperture_sum' dtype='float64' length=1>\n",
-      "28.8954008375]\n"
+      "[553.89677806746283, 17.260158307404726, 363.67726605070499, 150.40839083009803, 704.56128839476423, 53.750888421044969, 42.443942634107771, 262.98157677216284, 282.78621880591834, 17.0465795206105, 88.96993374407262, 137.78719893235996, 9.027491049652367, 20.699373581940371, 189.96333731526065, 185.93752571045945, 23.52330432183075, 71.776879616873799, 201.71725286177588, 89.304149846169224, 9.168968845066491, 109.43464984611138, 73.009528862791143, 2.879383590895229, 62.773162107937203, 211.70638386317538, 138.17685524995738, 376.56963679249367, 91.487256383916659, 28.91699033608722, 278.41366213512742, 122.66425817934804, 61.260546306584203, 123.66948116350579, 129.77977173270418, 417.67244122225406, 134.56700890372719, 83.059162968711718, 45.634551742821088, 262.10913205765297, 28.865385829751915, 137.61315874168815, 88.124597536213827, 69.631677148970937, 222.03171309834352, 58.731011918712326, 28.016988854151673, 750.17081173725251, 174.40618206677422, 497.36151532943529, 13.366304656407507, 35.359674629984411, 21.563840388921339, 151.30249615123563, 96.392354271612547, 5.9565801785966404, 8.0553315199531887, 2.6036539729152079, 8.2279684153736348, 22.097857561267311, 14.860374052070753, 10.952440063683319, 20.282112864275462, 53.465224360315702, 146.59445790627564, 107.44018598985735, 139.76317926290346, 36.484336217378527, 76.506295519966145, 43.181105628126922, 15.224636528453154, 43.348204958099586, 20.47363345197634, 1.1018014500116342, 500.31145947671018, 9.8099856611982261, 156.06782480347951, 7053.5284485437396, 171.7481637001008, 1033.0140810115636, 118.51029712401336, 161.01666603090689, 47.844984329993267, 478.57843417681028, 137.44390007689586, 149.67303584059798, 45.487154384420563, 392.21451252479045, 275.71437897594888, 12.934199584745485, 227.73299345844453, 51.198069269606194, 13.928096405083515, 24.718436399548771, 111.73457794214848, 748.7479326208686, 129.09949966278202, 521.72254347044623, 418.76615435023285, 2354.3093580700852, 83.616744836825049, 980.25966334648081, 408.89986160808832, 63.672824658564167, 1037.0865979440409, 325.57366897703383, 280.13527800916245, 93.934058449509394, 252.22346843271993, 102.09707198595292, 51.045133658127583, 66.620937087220781, 13.68213551663065, 231.09869456413355, 107.24563996311761, 1.0715608754609527, 11.310944835929192, 18.491376338058462, 582.65975575782136, 113.59127064955507, 79.139807944530716, 324.03019116799089, 4.363698369849395, 171.87557260867135, 187.73160888787794, 192.29930170549656, 52.363305759640198, 344.15043390994492, 154.0251860029847, 105.68025542668985, 118.88955556043607, 596.34711250477699, 683.68373385407415, 38.25044716376955, 133.09342296912791, 25.774971084837428, 4.2216346096199429, 2.3269706461590625, 44.848947388611627, 26.043049247880571, 24.61381722605698, 17.874663860284798, 45.935646421968734, 71.672638365468742, 334.26540504951527, 11.564446008883973, 19.314201367056921, 202.97639957024006, 16.183775805476124, 16.797506204447529, 151.8913441661868, 256.61810025981532, 71.049869220221609, 93.706632785124498, 79.510277205868022, 23.978005040571801, 22.74139700520125, 477.87978594219464, 119.6351388577485, 28.895400837454485]\n"
      ]
     }
    ],
@@ -273,7 +113,7 @@
     "for i in range(0, 160):\n",
     "    apertures = SkyCircularAperture(positions[i], r[i])\n",
     "    Fake_phot_table = aperture_photometry(hdu[0], apertures)\n",
-    "    Real_phot_table.append(Fake_phot_table['aperture_sum'])\n",
+    "    Real_phot_table.append(Fake_phot_table['aperture_sum'][0])\n",
     "    \n",
     "print(Real_phot_table)"
    ]
